<resources>
    <string name="app_name">Football Score Keeper</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="vs">VS</string>
    <string name="initial_value">0</string>
    <string name="add_goal">+1 Goal</string>
    <string name="add_card">+1 Card</string>
    <string name="add_foul">+1 Foul</string>
    <string name="reset">Reset</string>
</resources>
