<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/parent_viw_style"
    tools:context="com.example.android.footballscorekeeper.MainActivity">

    <!-- parent view-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- teamsA name   vs   team B name-->
        <LinearLayout style="@style/all_teams_name_wrapper">

            <TextView
                style="@style/each_team_name"
                android:background="@drawable/team_a_name_bg"
                android:text="@string/team_a" />

            <TextView
                style="@style/vs_text_style"
                android:text="@string/vs" />

            <TextView
                style="@style/each_team_name"
                android:background="@drawable/team_b_name_bg"
                android:text="@string/team_b" />

        </LinearLayout>

        <!-- all scores wrapper -->
        <LinearLayout style="@style/all_scores_wrapper">

            <!-- teamsA goals score   &   team B goals score-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_space">

                <TextView
                    android:id="@+id/score_team_a"
                    style="@style/goals_score"
                    android:layout_marginLeft="@dimen/small_space"
                    android:text="@string/initial_value" />

                <TextView style="@style/space_between_scores" />

                <TextView
                    android:id="@+id/score_team_b"
                    style="@style/goals_score"
                    android:layout_marginRight="@dimen/small_space"
                    android:text="@string/initial_value" />

            </LinearLayout>

            <!-- teamsA goals button  &  team B goals button-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/x_small_space">

                <Button
                    style="@style/goals_button"
                    android:onClick="addOneForTeamA"
                    android:text="@string/add_goal" />

                <ImageView
                    style="@style/ball_icon"
                    android:src="@drawable/ball_icon" />

                <Button
                    style="@style/goals_button"
                    android:onClick="addOneForTeamB"
                    android:text="@string/add_goal" />
            </LinearLayout>


            <!-- teamsA yellow cards   &  team B yellow cards-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/x_small_space">

                <Button
                    style="@style/small_button_style"
                    android:background="@drawable/yellow_card_button_bg"
                    android:onClick="addYellowCardForTeamA"
                    android:text="@string/add_card" />

                <TextView
                    android:id="@+id/yellow_cards_a"
                    style="@style/each_small_score"
                    android:text="@string/initial_value" />

                <ImageView
                    style="@style/each_small_icon"
                    android:src="@drawable/icon_yellow_card" />

                <TextView
                    android:id="@+id/yellow_cards_b"
                    style="@style/each_small_score"
                    android:text="@string/initial_value" />

                <Button
                    style="@style/small_button_style"
                    android:background="@drawable/yellow_card_button_bg"
                    android:onClick="addYellowCardForTeamB"
                    android:text="@string/add_card" />
            </LinearLayout>

            <!-- teamsA red cards   &  team B red cards-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/x_small_space">

                <Button
                    style="@style/small_button_style"
                    android:background="@drawable/red_card_button_bg"
                    android:onClick="addRedCardForTeamA"
                    android:text="@string/add_card" />

                <TextView
                    android:id="@+id/red_cards_a"
                    style="@style/each_small_score"
                    android:text="@string/initial_value" />

                <ImageView
                    style="@style/each_small_icon"
                    android:src="@drawable/icon_red_card" />

                <TextView
                    android:id="@+id/red_cards_b"
                    style="@style/each_small_score"
                    android:text="@string/initial_value" />

                <Button
                    style="@style/small_button_style"
                    android:background="@drawable/red_card_button_bg"
                    android:onClick="addRedCardForTeamB"
                    android:text="@string/add_card" />
            </LinearLayout>

            <!-- teamsA fouls  &  team B fouls-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/x_small_space">

                <Button
                    style="@style/small_button_style"
                    android:background="@drawable/fouls_button_bg"
                    android:onClick="addFoulForTeamA"
                    android:text="@string/add_foul" />

                <TextView
                    android:id="@+id/fouls_team_a"
                    style="@style/each_small_score"
                    android:text="@string/initial_value" />

                <ImageView
                    style="@style/each_small_icon"
                    android:src="@drawable/soccer_whistle" />

                <TextView
                    android:id="@+id/fouls_team_b"
                    style="@style/each_small_score"
                    android:text="@string/initial_value" />

                <Button
                    style="@style/small_button_style"
                    android:background="@drawable/fouls_button_bg"
                    android:onClick="addFoulForTeamB"
                    android:text="@string/add_foul" />
            </LinearLayout>

            <!-- reset button -->
            <Button
                style="@style/reset_button"
                android:onClick="reset"
                android:text="@string/reset" />

        </LinearLayout>

        <!-- playgroung image-->
        <ImageView
            style="@style/football_playground"
            android:src="@drawable/playg2" />

    </LinearLayout>
</ScrollView>
